--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<section>
 						<span class="icon major fa-gem"></span>
 						<h3>A goal of Mine</h3>
-						<p>I want to become a really good home cook! I love gathers and cooking for people!</p>
+						<p>I want to become a really good cook! I love gatherings and cooking for people!</p>
 					</section>
 		</section>
 
