made changes to allow for resume.pdf to be opened instead of resume.html since it was too bothersome to update. Also made a few updates to what is written in the index.html files.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					in computer science and a drive to learn and grow, I am excited to pursue 
 					a career in the dynamic and ever-evolving world of software development.</p>
 				<ul class="actions">
-					<li><a href="#one" class="button scrolly">Learn more</a></li>
+					<li><a href="#two" class="button scrolly">Learn more</a></li>
 				</ul>
 			</div>
 		</section>
@@ -54,22 +54,22 @@
 					<section>
 						<span class="icon solid major fa-school"></span>
 						<h3>Schooling</h3>
-						<p>I am currently finishing my third year of computer science at the University of Calgary. This will be my second degree! My first degree was in biology with a minor in chemistry.</p>
+						<p>I am currently in my fourth year of computer science at the University of Calgary. This will be my second degree! My first degree was in biology with a minor in chemistry.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-plane"></span>
 						<h3>Hobby #1</h3>
-						<p>I love traveling to new places! This doesn't always mean I need to get on a plane, I also enjoy exploring new neighbourhoods or grocery stores!</p>
+						<p>I love traveling to new places! This doesn't always mean I need to get on a plane, I also enjoy exploring new neighbourhoods or coffee shops!</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-dumbbell"></span>
 						<h3>Hobby #2</h3>
-						<p>I enjoy both solo and team fitness activites ranging from going to the gym, playing volleyball, and the occassional summer hike!</p>
+						<p>I enjoy both solo and team fitness activities ranging from going to the gym, playing volleyball, and the <strong>occasional</strong> summer hike!</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-camera"></span>
 						<h3>Hobby #3</h3>
-						<p>I enjoy taking photos! However, I am still trying to perfect this art!</p>
+						<p>I enjoy taking photos! However, I am still trying to perfect this art! My photos of the moon are quite disappointing.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-question"></span>
@@ -94,7 +94,6 @@
 						<h2>Project 1</h2>
 						<p>A cool project is coming soon!</p>
 						<ul class="actions">
-							<!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -106,7 +105,6 @@
 						<h2>Project 2</h2>
 						<p>Another cool project is coming soon!</p>
 						<ul class="actions">
-							<!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -118,7 +116,6 @@
 						<h2>Project 3</h2>
 						<p>A third project will be coming soon!!!</p>
 						<ul class="actions">
-							<!-- <li><a href="generic.html" class="button">Learn more</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -136,28 +133,6 @@
 					LinkedIn. You can also check out my GitHub profile to see some of my latest projects (I am currently
 					updating my github to be more aestetic and full). Looking
 					forward to hearing from you!</p>
-				<!-- <div class="split style1"> -->
-				<!-- <section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section> -->
 				<section>
 					<ul class="contact">
 						<li>
@@ -169,10 +144,7 @@
 							<h3>Email</h3>
 							<span>pcyhuii@gmail.com</span>
 						</li>
-						<!-- <li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li> -->
+
 						<li>
 							<h3>Social</h3>
 							<ul class="icons">
@@ -180,15 +152,12 @@
 										class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/paulhuii" class="icon brands fa-github"><span
 											class="label">GitHub</span></a></li>
-								<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 							</ul>
 						</li>
 						<li>
 							<h3>Resume</h3>
 							<ul class="icons">
-								<a href="generic.html" class="button">View Resume</a>
+								<a href="resume.pdf" target="_blank" class="button">View Resume</a>
 
 							</ul>
 					</ul>
@@ -207,13 +176,27 @@
 
 
 	<!-- Scripts -->
+    <!-- jQuery library -->
 	<script src="assets/js/jquery.min.js"></script>
+	
+    <!-- Scrollex: handles scrolling behavior -->
 	<script src="assets/js/jquery.scrollex.min.js"></script>
+	
+    <!-- Scrolly: smooth scrolling effect -->
 	<script src="assets/js/jquery.scrolly.min.js"></script>
+	
+    <!-- Browser feature detection -->
 	<script src="assets/js/browser.min.js"></script>
+	
+    <!-- Manage responsive breakpoints -->
 	<script src="assets/js/breakpoints.min.js"></script>
+	
+    <!-- Utility functions -->
 	<script src="assets/js/util.js"></script>
+	
+    <!-- Main application script -->
 	<script src="assets/js/main.js"></script>
+
 
 </body>
 
