--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,6 @@
+<!-- This previous held my resume but it was bothersome to continue updating it manually so 
+adjusted it to open as a pdf in another tab -->
+
 <!DOCTYPE HTML>
 
 <html>
