last minute adds

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
+		<!-- <link rel="stylesheet" href="assets/css/noscript.css" /> -->
 	</noscript>
 </head>
 
@@ -36,9 +36,9 @@
 			<div class="inner">
 				<h1>Paul Hui</h1>
 				<p> Hello! I am an aspiring software developer who is passionate about turning 
-					ideas into reality through the power of code. With a strong foundation 
+					ideas into reality. With a strong foundation 
 					in computer science and a drive to learn and grow, I am excited to pursue 
-					a career in the dynamic and ever-evolving world of software development.</p>
+					a career in this dynamic and ever-evolving world of software development.</p>
 				<ul class="actions">
 					<li><a href="#two" class="button scrolly">Learn more</a></li>
 				</ul>
